# app/controller/product/product_delete.go
@@ -6,6 +6,7 @@ import (
 	"api/app/services"
 
 	"github.com/gofiber/fiber/v2"
+	"gorm.io/gorm"
 )
 
 // DeleteProduct godoc
@@ -28,14 +29,29 @@ func DeleteProduct(c *fiber.Ctx) error {
 		return lib.ErrorUnauthorized(c)
 	}
 	db := services.DB.WithContext(c.UserContext())
+	id := c.Params("id")
 
 	var data model.Product
-	result := db.Model(&data).Where("id = ?", c.Params("id")).Take(&data)
+	result := db.Model(&data).Where("id = ?", id).Take(&data)
 	if result.RowsAffected < 1 {
 		return lib.ErrorNotFound(c)
 	}
 
-	db.Delete(&data)
+	err := db.Transaction(func(tx *gorm.DB) error {
+		if err := tx.Delete(&data).Error; err != nil {
+			return err
+		}
+
+		if err := tx.Where(`product_id = ?`, id).Delete(&model.Cart{}).Error; err != nil {
+			return err
+		}
+
+		return nil
+	})
+
+	if err != nil {
+		return lib.ErrorConflict(c, err)
+	}
 
 	return lib.OK(c)
 }
