# app/controller/transaction/transaction_payment_post.go
@@ -8,9 +8,25 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// PostTransactionPayment godoc
+// @Summary Pay Transaction
+// @Description Pay Transaction
+// @Param id path string true "Transaction ID"
+// @Param data body model.TransactionPaymentAPI true "Payment data"
+// @Accept  application/json
+// @Produce application/json
+// @Success 201 {object} model.TransactionPayment "Transaction data"
+// @Failure 400 {object} lib.Response
+// @Failure 404 {object} lib.Response
+// @Failure 409 {object} lib.Response
+// @Failure 500 {object} lib.Response
+// @Failure default {object} lib.Response
+// @Security ApiKeyAuth
+// @Router /transactions/{id}/payment [post]
+// @Tags Transaction
 func PostTransactionPayment(c *fiber.Ctx) error {
 	db := services.DB.WithContext(c.UserContext())
-	id := c.Params("transaction_id")
+	id := lib.StringToUUID(c.Params("id"))
 
 	api := new(model.TransactionPaymentAPI)
 	if err := lib.BodyParser(c, api); nil != err {
@@ -18,16 +34,19 @@ func PostTransactionPayment(c *fiber.Ctx) error {
 	}
 
 	trx := model.Transaction{}
-	db.Where(`id = ?`).Take(&trx)
+	db.Where(`id = ?`, id).Take(&trx)
 	if lib.RevStr(trx.TransactionStatus) == "paid" || lib.RevStr(trx.TransactionStatus) == "cancelled" {
 		return lib.ErrorNotAllowed(c)
 	}
 
 	var data model.TransactionPayment
 	lib.Merge(api, &data)
-	data.TransactionID = lib.StringToUUID(id)
+	data.TransactionID = id
+	if data.ReferenceNo == nil {
+		data.ReferenceNo = model.GenRefCount("Payment", db)
+	}
 
-	if err := db.Create(&data); err != nil {
+	if err := db.Create(&data).Error; err != nil {
 		return lib.ErrorConflict(c, err)
 	}
 
@@ -37,5 +56,10 @@ func PostTransactionPayment(c *fiber.Ctx) error {
 	if amount >= lib.RevFloat64(trx.TotalPrice) {
 		trx.TransactionStatus = lib.Strptr("paid")
 	}
+	trx.TotalPaid = lib.Float64ptr(amount)
+
+	db.Updates(&trx)
+	data.Transaction = &trx
+
 	return lib.OK(c, data)
 }
