# app/model/user.go
@@ -11,16 +11,14 @@ type User struct {
 
 // UserAPI User API
 type UserAPI struct {
-	FirstName        *string          `json:"first_name,omitempty" example:"Armada" gorm:"type:varchar(256);not null"`                                                                            // FirstName
-	LastName         *string          `json:"last_name,omitempty" example:"Muhammad Siswanto" gorm:"type:varchar(256)"`                                                                           // LastName
-	Username         *string          `json:"username,omitempty" gorm:"type:varchar(256);index:idx_users_Username_unique,unique,where:deleted_at is null;not null"`                               // Username
-	Email            *string          `json:"email,omitempty" example:"armadamuhammads@gmail.com" gorm:"type:varchar(256);index:idx_users_email_unique,unique,where:deleted_at is null;not null"` // Email
-	PhoneNumber      *string          `json:"phone_number,omitempty" example:"089678009400" gorm:"type:varchar(15)"`                                                                              // PhoneNumber
-	IsAdmin          *bool            `json:"is_admin,omitempty"`                                                                                                                                 // IsAdmin
-	Password         *string          `json:"-" gorm:"type:text"`                                                                                                                                 // Password
-	LastLogin        *strfmt.DateTime `json:"last_login,omitempty" format:"date-time" swaggertype:"string" gorm:"type:timestamptz"`                                                               // LastLogin
-	IsVerified       *bool            `json:"is_verified,omitempty"`                                                                                                                              // IsVerified
-	VerificationCode *string          `json:"verification_code,omitempty" example:"2024" gorm:"type:varchar(256)"`                                                                                // VerificationCode
+	FirstName   *string          `json:"first_name,omitempty" example:"Armada" gorm:"type:varchar(256);not null"`                                                                            // FirstName
+	LastName    *string          `json:"last_name,omitempty" example:"Muhammad Siswanto" gorm:"type:varchar(256)"`                                                                           // LastName
+	Username    *string          `json:"username,omitempty" gorm:"type:varchar(256);index:idx_users_Username_unique,unique,where:deleted_at is null;not null"`                               // Username
+	Email       *string          `json:"email,omitempty" example:"armadamuhammads@gmail.com" gorm:"type:varchar(256);index:idx_users_email_unique,unique,where:deleted_at is null;not null"` // Email
+	PhoneNumber *string          `json:"phone_number,omitempty" example:"089678009400" gorm:"type:varchar(15)"`                                                                              // PhoneNumber
+	IsAdmin     *bool            `json:"is_admin,omitempty"`                                                                                                                                 // IsAdmin
+	Password    *string          `json:"-" gorm:"type:text"`                                                                                                                                 // Password
+	LastLogin   *strfmt.DateTime `json:"last_login,omitempty" format:"date-time" swaggertype:"string" gorm:"type:timestamptz"`                                                               // LastLogin
 }
 
 type UserPayload struct {
@@ -36,13 +34,12 @@ func (s *User) Seed() *[]User {
 	u := []User{
 		{
 			UserAPI: UserAPI{
-				FirstName:  strptr("Admin"),
-				Username:   strptr("admin"),
-				Email:      strptr("admin@mail.com"),
-				IsAdmin:    boolInt(1),
-				Password:   strptr("$2a$10$8katy8Li/HTJ.LljINi3oOrEIrvL.iscnzjnqskWONkJlyPxLq9W."),
-				LastLogin:  now(),
-				IsVerified: boolInt(1),
+				FirstName: strptr("Admin"),
+				Username:  strptr("admin"),
+				Email:     strptr("admin@mail.com"),
+				IsAdmin:   boolInt(1),
+				Password:  strptr("$2a$10$8katy8Li/HTJ.LljINi3oOrEIrvL.iscnzjnqskWONkJlyPxLq9W."),
+				LastLogin: now(),
 			},
 		},
 		{
@@ -55,7 +52,6 @@ func (s *User) Seed() *[]User {
 				IsAdmin:     boolInt(0),
 				Password:    strptr("$2a$10$8katy8Li/HTJ.LljINi3oOrEIrvL.iscnzjnqskWONkJlyPxLq9W."),
 				LastLogin:   now(),
-				IsVerified:  boolInt(1),
 			},
 		},
 	}
