# docs/swagger.yaml
@@ -50,13 +50,15 @@ definitions:
     properties:
       additional:
         type: string
+      notes:
+        type: string
       price:
         description: Price
         example: 10000
         type: number
       product:
         $ref: '#/definitions/model.Product'
-      productid:
+      product_id:
         description: ProductID
         format: uuid
         type: string
@@ -64,18 +66,20 @@ definitions:
         description: Quantity
         example: 1
         type: integer
-      userid:
+      user_id:
         description: UserID
         format: uuid
         type: string
     type: object
   model.CartAPI:
     properties:
+      notes:
+        type: string
       price:
         description: Price
         example: 10000
         type: number
-      productid:
+      product_id:
         description: ProductID
         format: uuid
         type: string
@@ -83,10 +87,23 @@ definitions:
         description: Quantity
         example: 1
         type: integer
-      userid:
+      user_id:
         description: UserID
         format: uuid
         type: string
+    type: object
+  model.CartPayload:
+    properties:
+      notes:
+        type: string
+      product_id:
+        description: ProductID
+        format: uuid
+        type: string
+      quantity:
+        description: Quantity
+        example: 1
+        type: integer
     type: object
   model.Category:
     properties:
@@ -112,10 +129,27 @@ definitions:
         example: Food
         type: string
     type: object
+  model.ChangePasswordAPI:
+    properties:
+      confirm_password:
+        example: '@Password123'
+        type: string
+      email:
+        example: armadamuhammads@gmail.com
+        type: string
+      password:
+        example: '@Password123'
+        minLength: 8
+        type: string
+    required:
+    - confirm_password
+    - email
+    - password
+    type: object
   model.LoginAPI:
     properties:
       password:
-        example: '@Password123'
+        example: password
         type: string
       remember:
         example: true
@@ -138,7 +172,7 @@ definitions:
     properties:
       additional:
         type: string
-      categoryid:
+      category_id:
         description: CategoryID
         format: uuid
         type: string
@@ -160,7 +194,7 @@ definitions:
     type: object
   model.ProductAPI:
     properties:
-      categoryid:
+      category_id:
         description: CategoryID
         format: uuid
         type: string
@@ -201,6 +235,9 @@ definitions:
       phone_number:
         example: "089678009400"
         type: string
+      username:
+        example: armadamuhammads
+        type: string
     required:
     - confirm_password
     - email
@@ -220,6 +257,131 @@ definitions:
       token_type:
         type: string
     type: object
+  model.Transaction:
+    properties:
+      additional:
+        type: string
+      contact_detail:
+        type: string
+      contact_name:
+        type: string
+      description:
+        type: string
+      details:
+        items:
+          $ref: '#/definitions/model.TransactionDetail'
+        type: array
+      invoice_no:
+        type: string
+      notes:
+        type: string
+      payments:
+        items:
+          $ref: '#/definitions/model.TransactionPayment'
+        type: array
+      total_discount:
+        type: number
+      total_fee:
+        type: number
+      total_paid:
+        type: number
+      total_price:
+        type: number
+      total_productPrice:
+        type: number
+      transaction_status:
+        type: string
+      user_id:
+        format: uuid
+        type: string
+    type: object
+  model.TransactionDetail:
+    properties:
+      additional:
+        type: string
+      notes:
+        type: string
+      product:
+        $ref: '#/definitions/model.Product'
+      product_description:
+        type: string
+      product_id:
+        format: uuid
+        type: string
+      product_name:
+        type: string
+      product_price:
+        type: number
+      product_sku:
+        type: string
+      quantity:
+        type: integer
+      subtotal_price:
+        type: number
+      transaction:
+        $ref: '#/definitions/model.Transaction'
+      transaction_id:
+        format: uuid
+        type: string
+    type: object
+  model.TransactionPayload:
+    properties:
+      cart_ids:
+        format: uuid
+        type: string
+      description:
+        type: string
+      discount:
+        type: number
+      fee:
+        type: number
+      invoice_no:
+        type: string
+      notes:
+        type: string
+    type: object
+  model.TransactionPayment:
+    properties:
+      additional:
+        type: string
+      notes:
+        type: string
+      paid_amount:
+        type: number
+      paid_at:
+        format: date-time
+        type: string
+      reference_no:
+        type: string
+      transaction:
+        $ref: '#/definitions/model.Transaction'
+      transaction_id:
+        format: uuid
+        type: string
+      type:
+        type: string
+      via:
+        type: string
+    type: object
+  model.TransactionPaymentAPI:
+    properties:
+      notes:
+        type: string
+      paid_amount:
+        type: number
+      paid_at:
+        format: date-time
+        type: string
+      reference_no:
+        type: string
+      transaction_id:
+        format: uuid
+        type: string
+      type:
+        type: string
+      via:
+        type: string
+    type: object
   model.User:
     properties:
       additional:
@@ -228,35 +390,32 @@ definitions:
         description: Email
         example: armadamuhammads@gmail.com
         type: string
-      firstname:
+      first_name:
         description: FirstName
         example: Armada
         type: string
-      isadmin:
+      is_admin:
         description: IsAdmin
         type: boolean
-      isverified:
+      is_verified:
         description: IsVerified
         type: boolean
-      lastlogin:
+      last_login:
         description: LastLogin
         format: date-time
         type: string
-      lastname:
+      last_name:
         description: LastName
         example: Muhammad Siswanto
         type: string
-      password:
-        description: Password
-        type: string
-      phonenumber:
+      phone_number:
         description: PhoneNumber
         example: "089678009400"
         type: string
       username:
         description: Username
         type: string
-      verificationcode:
+      verification_code:
         description: VerificationCode
         example: "2024"
         type: string
@@ -267,35 +426,32 @@ definitions:
         description: Email
         example: armadamuhammads@gmail.com
         type: string
-      firstname:
+      first_name:
         description: FirstName
         example: Armada
         type: string
-      isadmin:
+      is_admin:
         description: IsAdmin
         type: boolean
-      isverified:
+      is_verified:
         description: IsVerified
         type: boolean
-      lastlogin:
+      last_login:
         description: LastLogin
         format: date-time
         type: string
-      lastname:
+      last_name:
         description: LastName
         example: Muhammad Siswanto
         type: string
-      password:
-        description: Password
-        type: string
-      phonenumber:
+      phone_number:
         description: PhoneNumber
         example: "089678009400"
         type: string
       username:
         description: Username
         type: string
-      verificationcode:
+      verification_code:
         description: VerificationCode
         example: "2024"
         type: string
@@ -340,6 +496,50 @@ paths:
       summary: show basic response
       tags:
       - API
+  /accounts/change-password:
+    post:
+      consumes:
+      - application/json
+      description: Change password
+      parameters:
+      - description: Account data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.ChangePasswordAPI'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - TokenKey: []
+      summary: Change password
+      tags:
+      - Account
   /accounts/login:
     post:
       consumes:
@@ -500,7 +700,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/model.CartAPI'
+          $ref: '#/definitions/model.CartPayload'
       produces:
       - application/json
       responses:
@@ -1162,6 +1362,310 @@ paths:
       summary: Update Product by id
       tags:
       - Product
+  /products/category/{id}:
+    get:
+      consumes:
+      - application/json
+      description: List of Product by category ID
+      parameters:
+      - description: Page number start from zero
+        in: query
+        name: page
+        type: integer
+      - description: Size per page, default `0`
+        in: query
+        name: size
+        type: integer
+      - description: Sort by field, adding dash (`-`) at the beginning means descending
+          and vice versa
+        in: query
+        name: sort
+        type: string
+      - description: Select specific fields with comma separated
+        in: query
+        name: fields
+        type: string
+      - description: custom filters, see [more details](https://github.com/morkid/paginate#filter-format)
+        in: query
+        name: filters
+        type: string
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of Product
+          schema:
+            allOf:
+            - $ref: '#/definitions/lib.Page'
+            - properties:
+                items:
+                  items:
+                    $ref: '#/definitions/model.Product'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: List of Product by category ID
+      tags:
+      - Product
+  /transactions:
+    get:
+      consumes:
+      - application/json
+      description: List of Transaction
+      parameters:
+      - description: Page number start from zero
+        in: query
+        name: page
+        type: integer
+      - description: Size per page, default `0`
+        in: query
+        name: size
+        type: integer
+      - description: Sort by field, adding dash (`-`) at the beginning means descending
+          and vice versa
+        in: query
+        name: sort
+        type: string
+      - description: Select specific fields with comma separated
+        in: query
+        name: fields
+        type: string
+      - description: custom filters, see [more details](https://github.com/morkid/paginate#filter-format)
+        in: query
+        name: filters
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of Transaction
+          schema:
+            allOf:
+            - $ref: '#/definitions/lib.Page'
+            - properties:
+                items:
+                  items:
+                    $ref: '#/definitions/model.Transaction'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: List of Transaction
+      tags:
+      - Transaction
+  /transactions/:
+    post:
+      consumes:
+      - application/json
+      description: Post new Transaction
+      parameters:
+      - description: Transaction data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.TransactionPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Transaction data
+          schema:
+            $ref: '#/definitions/model.Transaction'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Post new Transaction
+      tags:
+      - Transaction
+  /transactions/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a Transaction by id
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Transaction data
+          schema:
+            $ref: '#/definitions/model.Transaction'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get a Transaction by id
+      tags:
+      - Transaction
+  /transactions/{id}/cancel:
+    post:
+      consumes:
+      - application/json
+      description: Cancel Unpaid Transaction
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Transaction data
+          schema:
+            $ref: '#/definitions/model.Transaction'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Cancel Unpaid Transaction
+      tags:
+      - Transaction
+  /transactions/{id}/payment:
+    post:
+      consumes:
+      - application/json
+      description: Pay Transaction
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Payment data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.TransactionPaymentAPI'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Transaction data
+          schema:
+            $ref: '#/definitions/model.TransactionPayment'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Pay Transaction
+      tags:
+      - Transaction
   /users:
     get:
       consumes:
